Update SVM visualisation to add kernel space
